--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.InicioSesión">
-        <activity android:name=".Practica.Video_palabras"></activity>
+        <activity android:name=".Practica.Palabra_videos"
+            android:taskAffinity=".actividades.TabbedActivity"
+            android:excludeFromRecents="true">
+        </activity>
+        <activity android:name=".Practica.Video_palabras"
+            android:taskAffinity=".actividades.TabbedActivity"
+            android:excludeFromRecents="true"/>
         <activity android:name=".Aprende.ShowVideos" />
         <activity android:name=".Aprende.BotonesVideos" />
         <activity android:name=".NoSeUsan.BasesSwipe.PageChanger" /> <!-- android:theme="@style/Theme.InicioSesión.NoBar" -->
