--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.InicioSesión">
-        <activity android:name=".Practica.Parejas"></activity>
+        <activity android:name=".Practica.Evaluacion"></activity>
+        <activity android:name=".Practica.Parejas" />
         <activity
             android:name=".Practica.Palabra_videos"
             android:excludeFromRecents="true"
-            android:taskAffinity=".actividades.TabbedActivity"></activity>
+            android:taskAffinity=".actividades.TabbedActivity" />
         <activity
             android:name=".Practica.Video_palabras"
             android:excludeFromRecents="true"
