--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,12 @@ dependencies {
     implementation( 'com.github.thekhaeng:pushdown-anim-click:1.1.1' ){
         exclude group: 'com.android.support'
     }
-    implementation 'com.mikhaellopez:circularimageview:4.2.0'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'//no se usa
+    implementation 'de.hdodenhof:circleimageview:3.1.0'// no se usa
+    implementation "com.airbnb.android:lottie:3.5.0"
+    implementation( 'com.github.thekhaeng:pushdown-anim-click:1.1.1' ){
+        exclude group: 'com.android.support'
+    }
 
     //implementation 'com.android.support:cardview-v7:28.0.0'
     //
