--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,46 +12,38 @@
         android:roundIcon="@mipmap/logoapp"
         android:supportsRtl="true"
         android:theme="@style/Theme.InicioSesión">
-        <activity android:name=".Prueba.Empty"></activity>
         <activity
-            android:name=".popUps.PopUpShowReferences"
+            android:name=".UI.PopUpShowReferences"
             android:theme="@style/Theme.InicioSesión.popMe" />
-        <activity android:name=".actividades.SplashScreen">
+        <activity android:name=".Logic.Actividades.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Practica.Parejas" />
+        <activity android:name=".Logic.Practica.Parejas" />
         <activity
-            android:name=".Practica.Palabra_videos"
+            android:name=".Logic.Practica.Palabra_videos"
             android:excludeFromRecents="true"
             android:taskAffinity=".actividades.TabbedActivity" />
         <activity
-            android:name=".Practica.Video_palabras"
+            android:name=".Logic.Practica.Video_palabras"
             android:excludeFromRecents="true"
             android:taskAffinity=".actividades.TabbedActivity" />
-        <activity android:name=".Aprende.ShowVideos" />
-        <activity android:name=".Aprende.BotonesVideos" />
-        <activity android:name=".NoSeUsan.BasesSwipe.PageChanger" /> <!-- android:theme="@style/Theme.InicioSesión.NoBar" -->
-        <activity android:name=".NoSeUsan.BasesSwipe.DetailActivity" />
-        <activity android:name=".interfaces_cultura.VentanaLeyes" />
-        <activity android:name=".interfaces_cultura.VentanaLeyes2" />
+        <activity android:name=".Logic.Aprende.ShowVideos" />
+        <activity android:name=".Logic.Aprende.BotonesVideos" />
+        <activity android:name=".Logic.CulturaSorda.VentanaLeyes2" />
         <activity
-            android:name=".interfaces_cultura.PopUpListas"
+            android:name=".UI.PopUpListas"
             android:theme="@style/Theme.InicioSesión.popMe" />
         <activity
-            android:name=".popUps.PopUpShowVideos"
+            android:name=".UI.PopUpShowVideos"
             android:theme="@style/Theme.InicioSesión.popMe" />
-        <activity android:name=".actividades.TabbedActivity" />
-        <activity android:name=".actividades.Verbos" />
-        <activity android:name=".actividades.Aprende" />
-        <activity android:name=".NoSeUsan.InfoUser" />
-        <activity android:name=".NoSeUsan.PaginaPrincipalUsuario" />
-        <activity android:name=".actividades.SignUp" />
-        <activity android:name=".actividades.LogIn" />
-        <activity android:name=".actividades.MainActivity" />
+        <activity android:name=".Logic.Actividades.TabbedActivity" />
+        <activity android:name=".Logic.Actividades.SignUp" />
+        <activity android:name=".Logic.Actividades.LogIn" />
+        <activity android:name=".Logic.Actividades.MainActivity" />
     </application>
 
 </manifest>
